--- a/views/edge.html
+++ b/views/edge.html
@@ -1,14 +1,29 @@
 <div class="body">
 	
-	<div class="work-description">
-		<h1>EDGE U OF A BUSINESS COMPETITION</h1>
-		<h3>Branding and Web Design.</h3><br><br>
+	<div class="work-description edgebg">
+		<div class="work-content">
+			<span class="box">EDGE U of A</span><br>
+			<span class="box box2">Branding and web design for EDGE - U of A Business Competition.</span>
+		</div>
 		
-		<a href="http://edge-uofa.com/" target="_blank">VISIT SITE</a>
+		
+	</div>
+
+	<div class="work-comments">
+		<div class="blabble">
+			<p>EDGE is a student run competition that is held annually at the University of Alberta. <br> EDGE approched me for a complete revamp of their competition identity. I designed a logo and developed a promotional one-page website.</p>
+
+			<a href="http://edge-uofa.com/" target="_blank">VISIT SITE</a>
+		</div>
+
+		<div class="technology">
+			<h3>What I did</h3><p>Lead Designer/Developer virtually. </p>
+			<h3>What I used</h3><p>Photoshop, HTML5, CSS3, JQuery, JavaScript. 
+		</div>
 	</div>
 	
 	<div class="work">
-		<img src="assets/images/edge/edge.jpg" alt="edge">
+		<img src="assets/images/edge/edgestationary.jpg" alt="edge">
 	</div>	
 	
 	
