--- a/views/hidden.html
+++ b/views/hidden.html
@@ -1,11 +1,27 @@
 <div class="body">
-	<div class="work-description">
-		<h1>Hidden Gem</h1>
-		<h3>A UI project that allows users to create websites via GUI (Graphical user interface)</h3>
+
+	<div class="work-description hiddenbg">
+		<div class="work-content">
+			<span class="box">Hidden Gem</span><br>
+			<span class="box box2">A UI project that allows users to create websites via GUI (Graphical user interface)</span>
+		</div>
 	</div>
+
+	<div class="work-comments">
+		<div class="blabble">
+			<p>Hidden Gem is a conceptual online application that allows users who do not know coding to create unique and custom wordpress themes. <br> The focus of this project was to examine user experience with the toolbar</p>
+		</div>
+
+		<div class="technology">
+			<h3>What I did</h3><p>Lead Designer in a team of 4.</p>
+			<h3>What I used</h3><p>Photoshop, Illustrator. 
+		</div>
+	</div>
+
 	<div class="work">
 		<img src="assets/images/hidden/hiddengem.jpg" alt="Hiddengem">
-	</div>	
+	</div>
+		
 </div>
 
 <div class="work-nav">
