--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -3,6 +3,7 @@
 	width:100%;
 	background:white;
 	text-align:center;
+	margin-top:85px;
 	h1{
 		font-size:2em;
 		padding-top:100px;
@@ -58,6 +59,7 @@
 	top:0;
 	background-color:rgba(255, 255, 255, 0.9);
 	border-bottom:1px solid #DEDEDE;
+	z-index: 899;
 	
 	.next, .prev{
 		position:absolute;
@@ -225,7 +227,7 @@ figcaption p{
 
 
 /*===================================
-----------------------		BIG IMAGE CSS
+----------------------		PORTFOLIO PAGES CSS
 ===================================*/
 
 .work img{
@@ -234,9 +236,31 @@ figcaption p{
 }
 
 .work-description{ 
+	width:100%;
+	height:600px;
+}
+
+.work-content{
+	position:relative;
+	float:left;
+	text-align:left;
+	padding-top:15%;
+	padding-left:5%;
+}
+
+.work-comments{
+	width:80%;
+	margin:0 auto;
+	padding-top:50px;
+	.blabble{
+		width:50%;
+		float:left;
+	}
+	.technology{
+		width:50%;
+		float:right;
+	}
 	a{
-		border:2px solid black;
-		border-radius:7px;
 		padding:10px;
 		text-decoration:none;
 		color:black;
@@ -248,6 +272,23 @@ figcaption p{
 		color:white;
 	}
 }
+
+
+.hiddenbg{
+	background:url('../assets/images/hidden/bg.jpg') no-repeat center center fixed;
+	@include background-size(cover);
+}
+.edgebg{
+	background:url('../assets/images/edge/bg.jpg') no-repeat center center fixed;
+	@include background-size(cover);
+
+	.work-content{
+		float:right;
+		padding-right:5%;
+	}
+}
+
+
 
 /*===================================
 ----------------------		BIG IMAGE CSS
