--- a/css/main.scss
+++ b/css/main.scss
@@ -80,7 +80,7 @@ body{
 header{
 	position:fixed;
 	height:75px;
-	width:100%;
+	width:600px;
 	background:none;
 	z-index:999;
 	top:0;
@@ -119,7 +119,7 @@ header{
 			height:100%;
 			background:#383838;
 
-			width:10%;
+			width:30%;
 			
 			@include basic-animation(0.3s);
 			a{
