--- a/views/edge.html
+++ b/views/edge.html
@@ -11,13 +11,14 @@
 
 	<div class="work-comments">
 		<div class="blabble">
-			<p>EDGE is a student run competition that is held annually at the University of Alberta. <br> EDGE approched me for a complete revamp of their competition identity. I designed a logo and developed a promotional one-page website.</p>
+			<h3>BACKGROUND</h3><br>
+			<p>EDGE is a student run competition that is held annually at the University of Alberta. <br> EDGE approached me for a complete revamp of their competition identity. I designed a logo and developed a promotional one-page website.</p><br><br>
 
 			<a href="http://edge-uofa.com/" target="_blank">VISIT SITE</a>
 		</div>
 
 		<div class="technology">
-			<h3>What I did</h3><p>Lead Designer/Developer virtually. </p>
+			<h3>What I did</h3><p>Lead Designer/Developer virtually. </p><br>
 			<h3>What I used</h3><p>Photoshop, HTML5, CSS3, JQuery, JavaScript. 
 		</div>
 	</div>
@@ -38,9 +39,3 @@
 		<a href="#/photography">next</a>
 	</div>
 </div>
-
-
-<footer>
-	<h3>DANIEL PARK</h3>
-	<p>Made with love from Canada, 2014 ©</p>
-</footer>
