--- a/views/hidden.html
+++ b/views/hidden.html
@@ -9,17 +9,19 @@
 
 	<div class="work-comments">
 		<div class="blabble">
+			<h3>BACKGROUND</h3><br>
 			<p>Hidden Gem is a conceptual online application that allows users who do not know coding to create unique and custom wordpress themes. <br> The focus of this project was to examine user experience with the toolbar</p>
 		</div>
 
 		<div class="technology">
-			<h3>What I did</h3><p>Lead Designer in a team of 4.</p>
+			<h3>What I did</h3><p>Lead Designer in a team of 4.</p><br>
 			<h3>What I used</h3><p>Photoshop, Illustrator. 
 		</div>
 	</div>
 
 	<div class="work">
 		<img src="assets/images/hidden/hiddengem.jpg" alt="Hiddengem">
+		<img src="assets/images/hidden/hiddengif.gif" alt="hiddengif" id="gif">
 	</div>
 		
 </div>
@@ -33,9 +35,3 @@
 		<a href="#/pictography">next</a>
 	</div>
 </div>
-
-
-<footer>
-	<h3>DANIEL PARK</h3>
-	<p>Made with love from Canada, 2014 ©</p>
-</footer>
