--- a/views/home.html
+++ b/views/home.html
@@ -58,8 +58,15 @@
                  </figcaption></a>
              </figure>
          </li>
-			<li>
-			</li>
+        <li class="medium"> 
+             <figure class="cap-bot"><a href="#/mchacks">
+                    <img src="assets/images/workimages/mchacks.jpg" alt="mchacks">
+                 <figcaption>
+                     <p><span>Mchacks - </span>Web/Graphic Design</p>
+                 </figcaption></a>
+             </figure>
+         </li>
+
 </ul>
 
 </section>
