--- a/views/photography.html
+++ b/views/photography.html
@@ -1,9 +1,25 @@
 <div class="body">
-	<div class="work-description">
-		<h1>Photography</h1>
-		<h3>A visual journey through the lens</h3>
+
+	<div class="work-description photobg">
+		<div class="work-content">
+			<span class="box">Photography</span><br>
+			<span class="box box2">A collection of photos</span>
+		</div>
 	</div>
-	<div class="work picture">
+
+	<div class="work-comments">
+		<div class="blabble">
+			<h3>BACKGROUND</h3><br>
+			<p>Some days I like to go beyond the screen and capture moments through the lens.</p><br><br>
+		</div>
+
+		<div class="technology">
+			<h3>What I did</h3><p>Take/edit photos</p><br>
+			<h3>What I used</h3><p>Canon SL1, Photoshop</p>
+		</div>
+	</div>
+
+	<div class="picture">
 		<img src="assets/images/photography/ep2.jpg" alt="Ep2">
 		<img src="assets/images/photography/ep4.jpg" alt="Ep4">
 		<img src="assets/images/photography/umbrella2.jpg"  alt="Umbrella2">
@@ -28,8 +44,3 @@
 		<a href="#/hidden">next</a>
 	</div>
 </div>
-
-<footer>
-	<h3>DANIEL PARK</h3>
-	<p>Made with love from Canada, 2014 ©</p>
-</footer>
