--- a/views/pictography.html
+++ b/views/pictography.html
@@ -1,13 +1,25 @@
 <div class="body">
-	
-	<div class="work-description">
-		<h1>Pictography</h1>
-		<h3>Get statistics on your Instagram profile. <br> This project was made possible with PHP and Instagram API</h3><br><br>
-	
-		<a href="http://dparkd.com/visual/" target="_blank">VISIT SITE</a>
-	</div>
-	
 
+	<div class="work-description pictobg">
+		<div class="work-content">
+			<span class="box">//Pictography</span><br>
+			<span class="box box2">Getting Instagram statistics on a specific user.</span>
+		</div>
+	</div>
+
+	<div class="work-comments">
+		<div class="blabble">
+			<h3>BACKGROUND</h3><br>
+			<p>//Pictography was a project created so that I can gain experience with PHP and playing around with web data. Using the Instagram API I grab miscellaneous information unique to the user.</p><br><br>
+
+			<a href="http://dparkd.com/visual" target="_blank">VISIT SITE</a>
+		</div>
+
+		<div class="technology">
+			<h3>What I did</h3><p>Develop and Design</p><br>
+			<h3>What I used</h3><p>PHP, Instagram API, HTML/CSS</p>
+		</div>
+	</div>
 	
 	<div class="work">
 		<img src="assets/images/pictography/pictography.jpg" alt="Pictography">
@@ -24,7 +36,3 @@
 		<a href="#/posters">next</a>
 	</div>
 </div>
-<footer>
-	<h3>DANIEL PARK</h3>
-	<p>Made with love from Canada, 2014 ©</p>
-</footer>
