--- a/views/posters.html
+++ b/views/posters.html
@@ -1,9 +1,24 @@
 <div class="body">
-	<div class="work-description">
-		<h1>DP Posters</h1>
-		<h3>A group of posters that is mainly in the international typographic style.</h3>
+	<div class="work-description posterbg">
+		<div class="work-content">
+			<span class="box">Graphic Posters</span><br>
+			<span class="box box2">A collection of graphic posters</span>
+		</div>
 	</div>
-	<div class="work poster">
+
+	<div class="work-comments">
+		<div class="blabble">
+			<h3>BACKGROUND</h3><br>
+			<p>I am a big fan of the international typographic style (Swiss Style), so I created some posters in that style.</p><br><br>
+		</div>
+
+		<div class="technology">
+			<h3>What I did</h3><p>Concept and Design</p><br>
+			<h3>What I used</h3><p>Photography, Photoshop, Illustrator, Typography</p>
+		</div>
+	</div>
+
+	<div class="poster">
 		<img src="assets/images/dailies/daily1.jpg" alt="Daily1">
 		<img src="assets/images/dailies/daily2.jpg" alt="Daily2"> 
 		<img src="assets/images/dailies/daily3.jpg" alt="Daily3">
@@ -26,8 +41,3 @@
 		<a href="#/edge">next</a>
 	</div>
 </div>
-
-<footer>
-	<h3>DANIEL PARK</h3>
-	<p>Made with love from Canada, 2014 ©</p>
-</footer>
