--- a/views/hidden.html
+++ b/views/hidden.html
@@ -28,7 +28,7 @@
 
 <div class="work-nav">
 	<div class="prev">
-		<a href="#/photography">prev</a>
+		<a href="#/mchacks">prev</a>
 	</div>
 	
 	<div class="next">
