--- a/views/edge.html
+++ b/views/edge.html
@@ -32,10 +32,10 @@
 
 <div class="work-nav">
 	<div class="prev">
-		<a href="#/posters">prev</i></a>
+		<a href="#/mchacks">prev</i></a>
 	</div>
 
 	<div class="next">
-		<a href="#/photography">next</a>
+		<a href="#/posters">next</a>
 	</div>
 </div>
