--- a/views/hidden.html
+++ b/views/hidden.html
@@ -28,10 +28,10 @@
 
 <div class="work-nav">
 	<div class="prev">
-		<a href="#/mchacks">prev</a>
+		<a href="#/photography">prev</a>
 	</div>
 	
 	<div class="next">
-		<a href="#/pictography">next</a>
+		<a href="#/beacon">next</a>
 	</div>
 </div>
