--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,10 @@
 			<div class="text">
 				<span class="box">Do you see what i see?</span><br>
 				<span class="box box2">I explore ideas and communicate through design.</span><br><br>
-                <i class="fa fa-angle-down fa-2x"></i>
+                
+                <span class="box box2">
+                    <i class="fa fa-angle-down fa-2x"></i><p>Portfolio</p>
+                </span>
 			</div>
 
 		</div>
@@ -26,11 +29,35 @@
                  </figcaption></a>
              </figure> 
          </li>
+          <li class="large"> 
+             <figure class="cap-bot"><a href="#/beacon">
+                    <img src="assets/images/workimages/beacon.jpg" alt="beacon">
+                 <figcaption>
+                     <p><span>Ai Beacon - </span>Mobile App</p>
+                 </figcaption></a>
+             </figure> 
+         </li>
          <li class="medium"> 
              <figure class="cap-bot"><a href="#/pictography">
         	    	<img src="assets/images/workimages/pictography1.jpg" alt="pictography">
                  <figcaption>
                      <p><span>Pictography - </span>Instagram API</p>
+                 </figcaption></a>
+             </figure>
+         </li>
+         <li class="medium"> 
+             <figure class="cap-bot"><a href="#/mchacks">
+                    <img src="assets/images/workimages/mchacks.jpg" alt="mchacks">
+                 <figcaption>
+                     <p><span>Mchacks - </span>Web/Graphic Design</p>
+                 </figcaption></a>
+             </figure>
+         </li>
+         <li class="medium"> 
+             <figure class="cap-bot"><a href="#/edge">
+                    <img src="assets/images/workimages/edge1.jpg" alt="edge">
+                 <figcaption>
+                     <p><span>EDGE - </span>Web/Graphic Design</p>
                  </figcaption></a>
              </figure>
          </li>
@@ -42,14 +69,7 @@
                  </figcaption></a>
              </figure>
          </li>
-         <li class="medium"> 
-             <figure class="cap-bot"><a href="#/edge">
-        	    	<img src="assets/images/workimages/edge1.jpg" alt="edge">
-                 <figcaption>
-                     <p><span>EDGE - </span>Web/Graphic Design</p>
-                 </figcaption></a>
-             </figure>
-         </li>
+
          <li class="medium"> 
              <figure class="cap-bot"><a href="#/photography">
         	    	<img src="assets/images/workimages/photography1.jpg" alt="photography">
@@ -58,15 +78,6 @@
                  </figcaption></a>
              </figure>
          </li>
-        <li class="medium"> 
-             <figure class="cap-bot"><a href="#/mchacks">
-                    <img src="assets/images/workimages/mchacks.jpg" alt="mchacks">
-                 <figcaption>
-                     <p><span>Mchacks - </span>Web/Graphic Design</p>
-                 </figcaption></a>
-             </figure>
-         </li>
-
 </ul>
 
 </section>
