--- a/views/mchacks.html
+++ b/views/mchacks.html
@@ -14,11 +14,11 @@
 			<h3>BACKGROUND</h3><br>
 			<p>McHacks is a student run hackathon that is held at McGill University. <br> McHacks appoached me for a brand new logo with an accompanying one page sign up website.</p><br><br>
 
-			<a href="#" target="_blank">Site not up yet</a>
+			<a href="http://dparkd.com/McHacks/" target="_blank">Visit Prototype</a>
 		</div>
 
 		<div class="technology">
-			<h3>What I did</h3><p>Lead Designer/Developer virtually. </p><br>
+			<h3>What I did</h3><p>Lead Designer, Front-End Developer remotely. </p><br>
 			<h3>What I used</h3><p>Photoshop, HTML5, CSS3, JQuery, JavaScript. 
 		</div>
 	</div>
@@ -32,10 +32,10 @@
 
 <div class="work-nav">
 	<div class="prev">
-		<a href="#/photography">prev</i></a>
+		<a href="#/pictography">prev</i></a>
 	</div>
 
 	<div class="next">
-		<a href="#/hidden">next</a>
+		<a href="#/edge">next</a>
 	</div>
 </div>
