--- a/views/photography.html
+++ b/views/photography.html
@@ -37,10 +37,10 @@
 
 <div class="work-nav">
 	<div class="prev">
-		<a href="#/edge">prev</a>
+		<a href="#/posters">prev</a>
 	</div>
 
 	<div class="next">
-		<a href="#/mchacks">next</a>
+		<a href="#/hidden">next</a>
 	</div>
 </div>
