--- a/views/pictography.html
+++ b/views/pictography.html
@@ -29,10 +29,10 @@
 
 <div class="work-nav">
 	<div class="prev">
-		<a href="#/hidden">prev</a>
+		<a href="#/beacon">prev</a>
 	</div>
 
 	<div class="next">
-		<a href="#/posters">next</a>
+		<a href="#/mchacks">next</a>
 	</div>
 </div>
