--- a/views/posters.html
+++ b/views/posters.html
@@ -34,10 +34,10 @@
 
 <div class="work-nav">
 	<div class="prev">
-		<a href="#/pictography">prev</a>
+		<a href="#/edge">prev</a>
 	</div>
 
 	<div class="next">
-		<a href="#/edge">next</a>
+		<a href="#/photography">next</a>
 	</div>
 </div>
