--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -3,6 +3,7 @@
 	width:100%;
 	background:white;
 	text-align:center;
+	font-family:'Open Sans';
 	h1{
 		font-size:2em;
 		padding-top:100px;
@@ -14,7 +15,6 @@
 		font-size:1em;
 		font-weight:300;
 		color:gray;
-		font-family: 'EB Garamond', serif;
 	}
 }
 
@@ -37,7 +37,6 @@
 		font-size:1em;
 		font-weight:300;
 		color:gray;
-		font-family: 'EB Garamond', serif;
 	}
 }
 
@@ -257,7 +256,7 @@ figcaption p{
 		text-transform:uppercase;
 		color:black;
 		font-size:1.8em;
-		font-family:'OpenSans';
+		font-family:'Open Sans';
 	}
 	p{
 		color:#555;
@@ -334,6 +333,10 @@ figcaption p{
 	}
 }
 
+.beaconbg{
+	background:url('../assets/images/beacon/bg.jpg') no-repeat center center fixed;
+	@include background-size(cover);
+}
 
 /*===================================
 ----------------------		BIG IMAGE CSS
