--- a/css/main.scss
+++ b/css/main.scss
@@ -217,7 +217,14 @@ footer{
 	position:relative;
 
 	i{
-		color:#22A7F0;
+		color:white;
+		float:left;
+	}
+	p{
+		font-weight:200;
+		display:inline;
+		line-height:40px;
+		vertical-align: middle;
 	}
 }
 
