--- a/views/hidden.html
+++ b/views/hidden.html
@@ -10,7 +10,9 @@
 	<div class="work-comments">
 		<div class="blabble">
 			<h3>BACKGROUND</h3><br>
-			<p>Hidden Gem is a conceptual online application that allows users who do not know coding to create unique and custom wordpress themes. <br> The focus of this project was to examine user experience with the toolbar</p>
+			<p>Hidden Gem is a conceptual online application that allows users who do not know coding to create unique and custom wordpress themes. <br> The focus of this project was to examine user experience with the toolbar</p><br>
+
+			<a href="http://dparkd.com/Hidden/HiddenGemAppRoot/" target="_blank">View toolbar prototype. Try dragging over a section</a>
 		</div>
 
 		<div class="technology">
@@ -28,7 +30,7 @@
 
 <div class="work-nav">
 	<div class="prev">
-		<a href="#/photography">prev</a>
+		<a href="#/whiteboard">prev</a>
 	</div>
 	
 	<div class="next">
