--- a/views/home.html
+++ b/views/home.html
@@ -22,10 +22,18 @@
 
  <ul class="col">
          <li class="large"> 
-             <figure class="cap-bot"><a href="#/hidden">
-        	    	<img src="assets/images/workimages/hiddengem1.jpg" alt="hiddengemm">
+             <figure class="cap-bot"><a href="#/whiteboard">
+        	    	<img src="assets/images/workimages/whiteboard.jpg" alt="whiteboard">
                  <figcaption>
-                     <p><span>Hidden Gem - </span>UI Design</p>
+                     <p><span>WhiteBoard - </span>Web App for critiques</p>
+                 </figcaption></a>
+             </figure> 
+         </li>
+         <li class="large"> 
+             <figure class="cap-bot"><a href="#/hidden">
+                    <img src="assets/images/workimages/hiddengem1.jpg" alt="hiddengemm">
+                 <figcaption>
+                     <p>Hidden Gem - UI Design</p>
                  </figcaption></a>
              </figure> 
          </li>
