--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -19,6 +19,14 @@
                  </figcaption></a>
              </figure> 
          </li>
+         <li class="large"> 
+             <figure class="cap-bot"><a href="#/hidden">
+                    <img src="assets/images/workimages/hiddengem1.jpg" alt="hiddengemm">
+                 <figcaption>
+                     <p>Hidden Gem - UI Design</p>
+                 </figcaption></a>
+             </figure> 
+         </li>
          <li class="medium"> 
              <figure class="cap-bot"><a href="#/pictography">
         	    	<img src="assets/images/workimages/pictography1.jpg" alt="pictography">
