--- a/views/posters.html
+++ b/views/posters.html
@@ -29,6 +29,11 @@
 		<img src="assets/images/dailies/daily8.jpg" alt="Daily8">
 		<img src="assets/images/dailies/daily10.jpg" alt="Daily10">
 		<img src="assets/images/dailies/daily11.jpg" alt="Daily11">
+		<img src="assets/images/aselse/beenjino.jpg" alt="beenjino">
+		<img src="assets/images/aselse/faysebook.jpg" alt="faysebook">
+		<img src="assets/images/aselse/jeemale.jpg" alt="jeemale">
+		<img src="assets/images/aselse/yewtewb.jpg" alt="yewtewb">
+		<img src="assets/images/aselse/mindmap1.jpg" alt="mindmap1">
 	</div>	
 </div>
 
