--- a/views/edge.html
+++ b/views/edge.html
@@ -19,11 +19,12 @@
 
 		<div class="technology">
 			<h3>What I did</h3><p>Lead Designer/Developer virtually. </p><br>
-			<h3>What I used</h3><p>Photoshop, HTML5, CSS3, JQuery, JavaScript. 
+			<h3>What I used</h3><p>Responsive Design, Photoshop, HTML5, CSS3, JQuery, JavaScript. 
 		</div>
 	</div>
 	
 	<div class="work">
+		<img src="assets/images/edge/edgedevices.jpg" alt="edgedevices">
 		<img src="assets/images/edge/edgestationary.jpg" alt="edge">
 	</div>	
 	
