--- a/views/mchacks.html
+++ b/views/mchacks.html
@@ -19,11 +19,13 @@
 
 		<div class="technology">
 			<h3>What I did</h3><p>Lead Designer, Front-End Developer remotely. </p><br>
-			<h3>What I used</h3><p>Photoshop, HTML5, CSS3, JQuery, JavaScript. 
+			<h3>What I used</h3><p>Responsive Design, Photoshop, HTML5, CSS3, JQuery, JavaScript. 
 		</div>
 	</div>
 	
 	<div class="work mchacks">
+		<img src="assets/images/mchacks/devices.jpg" alt="devices">
+		<img src="assets/images/mchacks/branding.jpg" alt="devices">
 		<img src="assets/images/mchacks/mchacks.jpg" alt="mchacks">
 	</div>	
 	
