--- a/views/pictography.html
+++ b/views/pictography.html
@@ -17,7 +17,7 @@
 
 		<div class="technology">
 			<h3>What I did</h3><p>Develop and Design</p><br>
-			<h3>What I used</h3><p>PHP, Instagram API, HTML/CSS</p>
+			<h3>What I used</h3><p>Responsive Design, PHP, Instagram API, HTML/CSS</p>
 		</div>
 	</div>
 	
